  weechat_util_get_time_string in plugin API (patch #6914)
* core: add new option weechat.look.command_chars, add functions
  string_is_command_char and string_input_for_buffer in plugin and script API
* core: add new option weechat.look.read_marker_always_show
* core: use arguments for infolist "nicklist" to return only one nick or group
* gui: fix bug with global history, reset pointer to last entry after each user
  input (bug #28754)
* gui: fix bug with bar background after text with background color (bug #28157)
* gui: fix bug with cursor when position is last char of terminal
* api: add "version_number" for function info_get to get WeeChat version as
  number
* api: add functions "string_encode_base64" and "string_decode_base64", fix
  bug with base64 encoding
* api: add functions "string_match", "string_has_highlight" and
  "string_mask_to_regex" in script plugin API
* api: add missing infos in functions buffer_get_integer / buffer_get_string
  and in buffer infolist
* api: add description of arguments for functions hook_info and hook_infolist
* api: fix function "color" in Lua script API
* api: fix "inactivity" value when no key has been pressed since WeeChat started
  (bug #28930)
* api: return absolute path for info_get of "weechat_dir" (bug #27936)
* scripts: allow script commands to reload only one script
* perl: fix crash when callbacks are called during script initialization
  (bug #29018)
* irc: add SASL authentication, with PLAIN and DH-BLOWFISH mechanisms
  (task #8829)
* irc: fix crash with SSL connection if option ssl_cert is set (bug #28752)
* irc: fix bug with SSL connection (fails sometimes when ssl_verify is on)
  (bug #28741)
* irc: fix PART message received on Undernet server (bug #28825)
* irc: fix bug with /away -all: set or unset future away for disconnected
  servers (bug #29022)
* irc: bug with prefix "!" for mode "a" (channel admin) (bug #29109)
* irc: do not send signals "irc_in" and "irc_in2" when messages are ignored