@@ -305,9 +305,12 @@ weechat_lua_unload (struct t_plugin_script *script)
     char *lua_argv[1] = { NULL };
     void *interpreter;
     
-    weechat_printf (NULL,
-                    weechat_gettext ("%s: unloading script \"%s\""),
-                    LUA_PLUGIN_NAME, script->name);
+    if ((weechat_lua_plugin->debug >= 1) || !lua_quiet)
+    {
+        weechat_printf (NULL,
+                        weechat_gettext ("%s: unloading script \"%s\""),
+                        LUA_PLUGIN_NAME, script->name);
+    }
     
     if (script->shutdown_func && script->shutdown_func[0])
     {
@@ -676,11 +679,10 @@ weechat_plugin_init (struct t_weechat_plugin *plugin, int argc, char *argv[])
 int
 weechat_plugin_end (struct t_weechat_plugin *plugin)
 {
-    /* make C compiler happy */
-    (void) plugin;
-    
     /* unload all scripts */
-    weechat_lua_unload_all ();
+    lua_quiet = 1;
+    script_end (plugin, &lua_scripts, &weechat_lua_unload_all);
+    lua_quiet = 0;
     
     return WEECHAT_RC_OK;
 }
